<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageViewLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/location_32" />

        <TextView
            android:id="@+id/textViewLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:text="@string/location"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewTemperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperature"
            android:textSize="44sp" />

        <ImageView
            android:id="@+id/imageViewBigCloud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/cloud_64" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp"
        android:text="@string/overcast_cloud" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginHorizontal="10dp"
        android:background="@color/colorSkyBlue"
        android:paddingTop="10dp">

        <ImageView
            android:id="@+id/imageViewCloud"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            app:srcCompat="@drawable/cloud_32" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clouds"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="90%" />
        </LinearLayout>

        <View
            style="@style/Divider"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="10dp" />

        <ImageView
            android:id="@+id/imageViewEye"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            app:srcCompat="@drawable/eye_32" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewVisibility"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/visibility"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewVisibilityLength"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="10.5Km" />
        </LinearLayout>

        <View
            style="@style/Divider"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="10dp" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            app:srcCompat="@drawable/pressure3_32" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewPressure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pressure"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewPressureDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="1024 hPa" />
        </LinearLayout>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorSkyBlue">

        <ImageView
            android:id="@+id/imageViewHumidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            app:srcCompat="@drawable/humidity_64" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewHumidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/humidity"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewHumidityDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="80%" />

        </LinearLayout>

        <View
            style="@style/Divider"
            android:layout_marginLeft="15dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"/>

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            app:srcCompat="@drawable/wind4_64" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewWind"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/wind"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="12km/h" />
        </LinearLayout>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorSkyBlue">

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            app:srcCompat="@drawable/weather_64_3" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewLakeDistrict"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lake_district"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/snow_shower" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:gravity="right"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/cloud_32" />

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="65%" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/water2_32" />

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="50%" />
            </LinearLayout>
        </LinearLayout>
    </TableRow>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorSkyBlue">

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"

            app:srcCompat="@drawable/weather_64_2" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewBirmingham"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/birmingham"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/party_cloud" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:gravity="right"
            android:orientation="vertical"

            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/cloud_32" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="50%" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/water2_32" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="30%" />
            </LinearLayout>
        </LinearLayout>

    </TableRow>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </TableLayout>


</LinearLayout>